app/frontend/entrypoints/modders.scss
@import "@/breakpoints";
@import "@/colors";
@import "@/dark";

body.modders {
  section.modder-info {
    .meta {
      display: flex;
      position: relative;

      .logo {
        flex: none;
        margin: 0;
        width: 64px;
        height: 64px;
        background-color: $platinum;
        border-radius: 64px;
        margin-left: -2px;
        background-size: cover;
        background-position: center;
        display: flex;
        align-items: center;
        justify-content: center;
        color: darken($platinum, 20%);

        svg {
          width: 32px;
          height: 32px;
        }
      }

      .city {
        display: flex;
        align-items: center;
        color: var(--typography-highlight-color);
        margin-top: 4px;
        gap: 12px;
        font-weight: 500;

        @media (prefers-color-scheme: dark) {
          color: var(--typography-text-color);
        }

        svg {
          flex: none;
          width: 16px;
          height: 16px;
          position: relative;
          top: -1px;
        }

        .vetted {
          margin-left: 8px;
          display: flex;
          align-items: center;
          padding: 0 12px;
          height: 24px;
          font-size: 12px;
          text-transform: uppercase;
          font-weight: bold;
          letter-spacing: 1px;
          line-height: 1;
          background-color: var(--color-spice);
          color: var(--color-white);
          border-radius: 24px;

          @include dark {
            background-color: var(--color-indigo);
          }

          @include medium {
            position: absolute;
            top: 40px;
            left: 40px;
            width: 24px;
            font-size: 0;
            padding-left: 8px;
            margin: 0 24px 0 0;
            pointer-events: none;
          }

          svg {
            top: 0;
            width: 12px;
            height: 12px;
            margin: 0 6px 0 -2px;
          }
        }
      }

      > div {
        flex: auto;
        margin-left: 24px;
        padding-top: 13px;
        min-width: 0;
      }
    }

    .services {
      margin-top: 48px;
      max-width: 600px;
      min-height: 16px;

      ol {
        list-style: none;
        margin: 0;
        padding: 0;
        cursor: default;
        display: flex;
        flex-flow: row wrap;
        gap: 12px;

        @include small {
          gap: 8px;
        }
      }
    }
  }
}

body.modders.index {
  .search-fields {
    margin-top: 64px;

    @include small {
      margin-top: 48px;
    }
  }

  .sidebar {
    margin: -24px;
    padding: 24px 24px 28px;
    background-color: $crystal;
    border-radius: 16px;

    @include dark {
      background-color: var(--color-smoke);

      .text-input,
      .ServiceSelector .service-selector__control,
      .ServiceSelector .service-selector__menu {
        background-color: var(--color-black);
      }
    }

    @include small {
      border-radius: 0;
    }

    .ServiceSelector {
      .service-selector__control--menu-is-open,
      .service-selector__menu {
        width: 800px;
      }
    }

    .LocationSelector {
      flex-flow: column nowrap;
      grid-gap: 8px;
      align-items: flex-start;

      .Geolocator {
        margin: 0 0 0 2px;
      }

      .geolocation-indicator {
        width: 100%;
      }
    }

    input[type="submit"] {
      width: 100%;
      justify-content: center;
    }
  }

  section.results {
    padding-left: 48px;

    @include small {
      padding-left: 0;
      margin-top: 24px;
    }

    .react-container-ModderMap {
      height: 320px;
      margin-top: -24px;
      border-radius: 16px;
      border: 2px solid $crystal;
      overflow: hidden;
      opacity: 0;
      visibility: hidden;
      transition:
        opacity 0.5s ease-in-out,
        visibility 0s linear 0.5s;

      @include dark {
        border-color: $panasonic;
      }

      @include small {
        margin-top: 0;
      }
    }

    .heading {
      display: flex;
      align-items: flex-end;
      margin-top: -296px;

      @include small {
        margin-top: -320px;
      }

      button {
        margin-left: auto;
        display: flex;
        align-items: center;
        gap: 12px;

        &.hide-map {
          display: none;
        }
      }
    }

    &.initialized .heading {
      transition: margin-top 0.5s ease-in-out;
    }

    &.map-visible {
      .react-container-ModderMap {
        opacity: 1;
        visibility: visible;
        transition: opacity 0.5s ease-in-out;
      }

      .heading {
        margin-top: 48px;

        @include small {
          margin-top: 24px;
        }

        button.hide-map {
          display: inline-flex;
        }

        button.show-map {
          display: none;
        }
      }
    }

    .modder-info {
      margin-top: 32px;

      > .photos {
        position: relative;
        margin-top: 64px;

        &::after {
          content: "";
          z-index: 10;
          position: absolute;
          top: 0;
          right: 0;
          bottom: 0;
          width: 100px;
          pointer-events: none;
          background: linear-gradient(
            to right,
            transparent,
            var(--color-pearl)
          );

          @include dark {
            background: linear-gradient(
              to right,
              transparent,
              var(--color-black)
            );
          }
        }

        .photo-container {
          display: flex;
          flex-flow: row nowrap;
          gap: 16px;
          overflow: auto;
          -ms-overflow-style: none;
          scrollbar-width: none;

          &::-webkit-scrollbar {
            display: none;
          }
        }
      }

      .meta {
        margin-top: 24px;

        h3 {
          text-transform: none;
          letter-spacing: 0;
        }

        > div {
          padding-top: 10px;
        }
      }

      .services {
        display: var(--service-display, block);
        margin-top: 16px;
        margin-left: 86px;

        @include medium {
          margin-left: 0;
        }
      }
    }
  }
}

body.modders.show {
  nav.admin-toolbar {
    padding: 16px 24px 18px;
    border: 2px solid $platinum;
    border-radius: 16px;
    background-color: $crystal;
    display: flex;
    background-color: hsl(hue($emerald), saturation($emerald), 80%);
    border-color: hsl(hue($emerald), saturation($emerald), 60%);
    color: hsl(hue($emerald), saturation($emerald), 20%);

    > * + * {
      margin-left: 24px;
    }
  }

  section.unclaimed-notice {
    padding: 16px 24px 18px;
    border: 2px solid $platinum;
    border-radius: 16px;
    background-color: $crystal;
    display: flex;

    > figure {
      flex: none;
      margin: 8px 0 0;

      > svg {
        color: $platinum;
        width: 24px;
        height: auto;
      }
    }

    > div {
      flex: auto;
      margin-left: 24px;
    }
  }

  section.photos {
    height: 280px;
    position: relative;
    display: flex;
    flex-flow: column nowrap;

    &.empty:not(.signed-in-modder) {
      display: none;
    }

    > .photo-container {
      flex: none;
      width: 100vw;
      height: 100%;
      display: flex;
      gap: 32px;
      overflow-x: auto;
      position: relative;
      left: calc((100vw - 100%) / -2);
      padding: 0 calc((100vw - 100%) / 2);
      -ms-overflow-style: none;
      scrollbar-width: none;

      &::-webkit-scrollbar {
        display: none;
      }

      img {
        height: 100%;
        flex: none;
      }
    }
  }

  section.sidebar {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-end;
    padding-top: 8px;

    @include small {
      align-items: center;
    }

    svg {
      width: 16px;
      height: 16px;
    }

    a {
      display: inline-flex;
      align-items: center;
      font-size: 14px;

      svg {
        margin-right: 8px;
      }

      & + a {
        margin-top: 16px;
      }

      &.button {
        margin-right: -2px;

        svg.external-icon {
          margin: 0 0 0 12px;
          position: relative;
          top: -1px;
        }

        & + a {
          margin-top: 24px;
        }
      }
    }

    p {
      margin-top: 24px;
      line-height: 1;

      & + p {
        margin-top: 8px;
      }
    }
  }

  section.location {
    height: 30vw;
    min-height: 300px;

    .react-container-ModderMap {
      height: 100%;
    }
  }
}

